Fixed horizontal scroll on mobile

--- a/assets/styles/partials/_header-left.scss
+++ b/assets/styles/partials/_header-left.scss
@@ -16,6 +16,11 @@
     margin-left: 10px;
   }
 
+  @media screen and (max-width: 767px) {
+    margin-left: 0;
+    padding-left: 20px;
+  }
+
   & .menu-list {
     margin-top: 80px;
     float: unset;
